--- a/wiki/ToDoList.wiki
+++ b/wiki/ToDoList.wiki
@@ -3,6 +3,7 @@ TODO list:
 
 Make sure our .cpp files compile. They should be checked in order from simplest/smallest to largest/complexest. The following still need to be checked:
  * Bot.cpp
+ * Camera.cpp
  * PhysicalLine.cpp (may not even be used...)
  * mci.cpp
  * vision.cpp
@@ -16,3 +17,9 @@ Blob recognition of a given color. Shape is not important, we just need the cent
 Test the motor controller with a motor controller test file. Just see if the basic mci functions work.
 
 Put functionality into our movement functions that keeps track of our position and angle.
+
+Bot.h/cpp needs a function called followLineTo(Cylinder cyl)
+
+On approximately line 13 of vision.cpp, there is a char which has multiple characters/digits assigned to it. Compiler is complaining
+
+John West: grayImage, color, and checkArea all need to be put into versioning if they aren't already, and they need to be made accessible to Camera.h
